add 'My Dog' section because Edu deserves the recognition

--- a/about/index.html
+++ b/about/index.html
@@ -42,6 +42,16 @@
             <li>Coding</li>
           </ul>
       </section>
+			<!--Dog Section-->
+			<section>
+				<h3>My Dog</h3>
+					<ul>
+						<p>My dog is an (almost) four year old Jack-Russel Terrier mixed named Edujives.
+               You can call her Edu for short. Her nicknames include "Albondiga", which is
+               Spanish for meatball.  She likes to roll around on her towel after a bath, chew
+               on her bed, and enjoys 1AM walks around the neighborhood.
+					</ul>
+			</section>
       <!--Projects Section-->
       <section>
         <h3>Projects</h3>
