--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
+  <head>
     <title>About Me</title>
     <meta charset="utf-8" />
   </head>
@@ -18,11 +18,11 @@
       </ul>
     </header>
     <section>
-			<h2>Information</h2>
+      <h2>Information</h2>
       <!--Summary Section-->
       <section>
-        <h3>Summary</h3>
-        <p> I'm a second year undergraduate student at the Illinois Institute of Technology,
+        <h3 class="section-title">Summary</h3>
+        <p class="para"> I'm a second year undergraduate student at the Illinois Institute of Technology,
             studying Information Technology and Management. Born and raised in Chicago, I've
             decided to give back to my city by working at a non-profit organization for the
             past few months.  I have interests in Web and Software Development as well as
@@ -32,7 +32,7 @@
       </section>
       <!--Hobbies and Interests Section-->
       <section>
-        <h3>Interests</h3>
+        <h3 class="section-title">Interests</h3>
           <ul>
             <li>Creative Writing</li>
             <li class="list-description">Poetry, Stories</li>
@@ -42,22 +42,42 @@
             <li>Coding</li>
           </ul>
       </section>
-			<!--Dog Section-->
-			<section>
-				<h3>My Dog</h3>
-					<ul>
-						<p>My dog is an (almost) four year old Jack-Russel Terrier mixed named Edujives.
+      <!--Dog Section-->
+      <section>
+        <h3 class="section-title">My Dog</h3>
+          <ul>
+            <li>
+							<p class="para">My dog is an (almost) four year old Jack-Russel Terrier mixed named Edujives.
                You can call her Edu for short. Her nicknames include "Albondiga", which is
                Spanish for meatball.  She likes to roll around on her towel after a bath, chew
                on her bed, and enjoys 1AM walks around the neighborhood.
+					   </p>
+						</li>
 					</ul>
 			</section>
       <!--Projects Section-->
       <section>
-        <h3>Projects</h3>
+        <h3 class="section-title">Projects</h3>
           <ul>
-            <li>Kiosk Vending Machine Program using JAVA</li>
-            <li>Two-User Tic Tac Toe Game using C++</li>
+            <li>
+							<h4 class="project-name">Kiosk Vending Machine Program using JAVA</h4>
+						</li>
+						<li class="project-course">Project for ITM 311 Course</li>
+						<li>
+							<p class="project-description">This project required multiple deliverables, including charts created using
+                 Visio and a GUI interface for clients to select and purchase a variety of
+                 pre-determined products.
+							</p>
+						</li>
+            <li>
+							<h4 class="project-name">Two-User Tic Tac Toe Game using C++</h4>
+						</li>
+						<li class="project-course">Project for ITM 312 Course</li>
+						<li>
+							<p class="project-description">This project required the creation of a program that would allow the user to
+                 play Tic-Tac-Toe against either the CPU (randomized) or against another person.
+                 The project relied on the console to print the current status of the game.
+						</li>
           </ul>
       </section>
     </section>
