fix errors in spaces (tabs not allowed) to comply with linter configuration

--- a/about/index.html
+++ b/about/index.html
@@ -47,39 +47,39 @@
         <h3 class="section-title">My Dog</h3>
           <ul>
             <li>
-							<p class="para">My dog is an (almost) four year old Jack-Russel Terrier mixed named Edujives.
-               You can call her Edu for short. Her nicknames include "Albondiga", which is
-               Spanish for meatball.  She likes to roll around on her towel after a bath, chew
-               on her bed, and enjoys 1AM walks around the neighborhood.
-					   </p>
-						</li>
-					</ul>
-			</section>
+              <p class="para">My dog is an (almost) four year old Jack-Russel Terrier mixed named Edujives.
+                        You can call her Edu for short. Her nicknames include "Albondiga", which is
+                        Spanish for meatball. She likes to roll around on her towel after a bath, chew
+                        on her bed, and enjoys 1AM walks around the neighborhood. </p>
+            </li>
+        </ul>
+      </section>
       <!--Projects Section-->
       <section>
         <h3 class="section-title">Projects</h3>
           <ul>
             <li>
-							<h4 class="project-name">Kiosk Vending Machine Program using JAVA</h4>
-						</li>
-						<li class="project-course">Project for ITM 311 Course</li>
-						<li>
-							<p class="project-description">This project required multiple deliverables, including charts created using
-                 Visio and a GUI interface for clients to select and purchase a variety of
-                 pre-determined products.
-							</p>
-						</li>
+              <h4 class="project-name">Kiosk Vending Machine Program using JAVA</h4>
+            </li>
+            <li class="project-course">Project for ITM 311 Course</li>
             <li>
-							<h4 class="project-name">Two-User Tic Tac Toe Game using C++</h4>
-						</li>
-						<li class="project-course">Project for ITM 312 Course</li>
-						<li>
-							<p class="project-description">This project required the creation of a program that would allow the user to
-                 play Tic-Tac-Toe against either the CPU (randomized) or against another person.
-                 The project relied on the console to print the current status of the game.
-						</li>
+              <p class="project-description">This project required multiple deliverables, including charts created using
+                              Visio and a GUI interface for clients to select and purchase a variety of
+                              pre-determined products.
+              </p>
+            </li>
+            <li>
+              <h4 class="project-name">Two-User Tic Tac Toe Game using C++</h4>
+            </li>
+            <li class="project-course">Project for ITM 312 Course</li>
+            <li>
+              <p class="project-description">This project required the creation of a program that would allow the user to
+                              play Tic-Tac-Toe against either the CPU (randomized) or against another person.
+                              The project relied on the console to print the current status of the game.
+              </p>
+            </li>
           </ul>
+        </section>
       </section>
-    </section>
-  </body>
+    </body>
 </html>
