--- a/courses/index.html
+++ b/courses/index.html
@@ -75,6 +75,20 @@
       <li>Agile Project Management skills</li>
     </ul>
   </section>
+  <!--ITM 312-->
+  <section>
+    <h2 class="course-number">ITM 312</h2>
+    <ul>
+      <li class="course-name">Introduction to Systems Software Programming</li>
+      <li class="semester">Spring 2018</li>
+      <li>
+        <h3>Course Content</h3>
+      </li>
+      <li>Basics of systems programming (focus on C++)</li>
+      <li>Creation of source and header files</li>
+      <li>Basic and abstract data types plus applications</li>
+    </ul>
+  </section>
   <!--ITMO 440-->
   <section>
     <h2 class="course-number">ITMO 440</h2>
