minor change in location of closing tag for 'My Dog' section paragraph

--- a/about/index.html
+++ b/about/index.html
@@ -50,7 +50,8 @@
               <p class="para">My dog is an (almost) four year old Jack-Russel Terrier mixed named Edujives.
                         You can call her Edu for short. Her nicknames include "Albondiga", which is
                         Spanish for meatball. She likes to roll around on her towel after a bath, chew
-                        on her bed, and enjoys 1AM walks around the neighborhood. </p>
+                        on her bed, and enjoys 1AM walks around the neighborhood.
+							</p>
             </li>
         </ul>
       </section>
